swen430as1/tests/valid/trycatch/TryCatch_Valid_03.while
void main() {
    try {
	throw 1;
    } catch(int x) {
	assert x == 1;
    }
}
