swen430as1/tests/invalid/trycatch/TryCatch_Invalid_09.while
int f(int x) {
    int r;
    //
    try {
        r = 1;
    } catch(int y) {
        // 
    }
    //
    return r;
}